deploy: Set registry

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "compiled"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
     "father": "^4.5.1-beta.4"
